Add Kafka consumer to listen user_service topic
